--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -29,8 +29,8 @@
   weight = 5
 
 [[main]]
-  name = "Hobbies"
-  url = "#06_hobbies"
+  name = "Certification"
+  url = "#06_certification"
   weight = 6
 
 [[main]]
