--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -148,6 +148,9 @@ address_format = "en-us"
 # Get user avatars from Gravatar.com? (true/false)
 gravatar = false
 
+# Choose a shape for avatar images. Options: circle, square.
+  shape = "square"
+
 # Main menu alignment (l = left, c = center, r = right) and logo options.
 main_menu = {align = "l", show_logo = true}
 
