--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -147,10 +147,7 @@ address_format = "en-us"
 
 # Get user avatars from Gravatar.com? (true/false)
 gravatar = false
-
-# Choose a shape for avatar images. Options: circle, square.
-shape = "square" 
-
+ 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
 main_menu = {align = "l", show_logo = true}
 
@@ -178,6 +175,17 @@ plugins_js  = []
   de = {order = ['street', 'postcode', 'city'], delimiters = [', ', ' ', '']}
   fr-fr = {order = ['street', 'postcode', 'city'], delimiters = ['<br>', ' ', '']}
   zh = {order = ['postcode', 'region', 'city', 'street'], delimiters = [' ', ' ', ' ', '']}
+
+# Avatars.
+# An avatar is an image that appears next to a user's name.
+# An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
+[avatar]
+  # Get user avatars from Gravatar.com? (true/false)
+  gravatar = false
+
+  # Choose a shape for avatar images. Options: circle, square.
+  shape = "square"
+
 
 # Configuration of publication pages.
 [publications]
