--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-#github: cristianrcv
-custom: https://www.paypal.me/cristianrcv
+#github: Ravindra-Raut
+#custom: https://www.paypal.me/Ravindra-Raut
