--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -50,7 +50,7 @@ description = ""
 
 # Display a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
-# logo = "logo.jpg"
+logo = "logo.jpg"
 
 ############################
 ## Site Features
@@ -149,7 +149,7 @@ address_format = "en-us"
 gravatar = true
 
 # Choose a shape for avatar images. Options: circle, square.
-  shape = "square" 
+shape = square
 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
 main_menu = {align = "l", show_logo = true}
@@ -214,7 +214,7 @@ plugins_js  = []
 
   # Configuration of Disqus.
   [comments.disqus]
-    shortname = "cristianrcv"  # Paste the shortname from your Disqus dashboard.
+    shortname = "ravindra-raut"  # Paste the shortname from your Disqus dashboard.
     show_count = true  # Show comment count in page header? (true/false)
 
 ############################
