--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -20,7 +20,7 @@ copyright = "&copy; 2021"
 ############################
 
 # Name of Academic theme folder in `themes/`.
-theme = "academic"
+theme = "academic @ fc0d15d"
 
 # Get last modified date for content from Git?
 enableGitInfo = true
