--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,7 +9,7 @@ title = "Ravindra Raut"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://ravindra-raut2.netlify.app/"
+baseurl = "https://ravindra-raut.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
