--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -15,6 +15,8 @@ baseurl = "https://ravindra-raut.netlify.app/"
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 copyright = "&copy; 2021"
 
+<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-8d694b39-f5d2-4d2f-ae14-760f2cd0296b"></div>
 ############################
 ## Advanced options below ##
 ############################
